--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,36 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<title>AirBnB clone</title>
-	<meta charset="utf-8">
-	<style>
-		header {
-			background-color: #FF0000;
-			height: 70px;
-			width: 100%;
-		}
-
-		footer {
-			background-color: #00FF00;
-			height: 60px;
-			width: 100%;
-			text-align: center;
-			bottom: 0;
-			position: absolute;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
-	</style>
-</head>
-
-<body style="margin: 0;
-padding: 0">
-	<header></header>
-	<footer>
-		<text>Holberton School</text>
-	</footer>
-</body>
-
+<!doctype html>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>AirBnB clone</title>
+		<style>
+			body {
+				margin: 0;
+				padding: 0;
+			}
+			header {
+				background-color: #FF0000;
+				height: 70px;
+				width: 100%;
+			}
+			footer {
+				position: fixed;
+				bottom: 0;
+				background-color: #00FF00;
+				height: 60px;
+				width: 100%;
+				text-align: center;
+				line-height: 60px;
+			}
+		</style>
+	</head>
+	<body>
+		<header>
+		</header>
+		<footer>
+			Holberton School
+		</footer>
+	</body>
 </html>
