--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<title>AirBnB clone</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="styles/2-common.css">
-	<link rel="stylesheet" href="styles/2-header.css">
-	<link rel="stylesheet" href="styles/2-footer.css">
-</head>
-
-<body>
-	<header></header>
-	<footer>
-		<text>Holberton School</text>
-	</footer>
-</body>
-
+<!doctype html>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>AirBnB clone</title>
+		<link rel="stylesheet" href="styles/2-common.css">
+		<link rel="stylesheet" href="styles/2-header.css">
+		<link rel="stylesheet" href="styles/2-footer.css">
+	</head>
+	<body>
+		<header>
+		</header>
+		<footer>
+			Holberton School
+		</footer>
+	</body>
 </html>
