--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -10,10 +10,11 @@
 	</head>
 	<body>
 		<header>
-			<img src="images/logo.png" alt="AirBnB logo">
+<!--			<img src="images/logo.png" alt="AirBnB logo">
+-->
 		</header>
 		<footer>
-			Holberton School
+			Best School
 		</footer>
 	</body>
 </html>
