--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<title>AirBnB clone</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="styles/4-common.css">
-	<link rel="stylesheet" href="styles/3-header.css">
-	<link rel="stylesheet" href="styles/3-footer.css">
-	<link rel="stylesheet" href="styles/4-filters.css">
-	<link rel="icon" href="images/icon.png">
-	<link rel="logo" href="images/logo.png">
-</head>
-
-<body>
-	<header></header>
-	<div class="container">
-		<section class="filters">
-			<button>Search</button>
-		</section>
-	</div>
-	<footer>
-		<text>Holberton School</text>
-	</footer>
-</body>
-
+<!doctype html>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>AirBnB clone</title>
+		<link rel="stylesheet" href="styles/4-common.css">
+		<link rel="stylesheet" href="styles/3-header.css">
+		<link rel="stylesheet" href="styles/3-footer.css">
+		<link rel="stylesheet" href="styles/4-filters.css">
+		<link rel="icon" href="images/icon.png">
+	</head>
+	<body>
+		<header>
+		</header>
+		<div class="container">
+			<section class="filters">
+				<button>Search</button>
+			</section>
+		</div>
+		<footer>
+			Best School
+		</footer>
+	</body>
 </html>
