--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,35 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<title>AirBnB clone</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="styles/4-common.css">
-	<link rel="stylesheet" href="styles/3-header.css">
-	<link rel="stylesheet" href="styles/3-footer.css">
-	<link rel="stylesheet" href="styles/5-filters.css">
-	<link rel="icon" href="images/icon.png">
-	<link rel="logo" href="images/logo.png">
-</head>
-
-<body>
-	<header></header>
-	<div class="container">
-		<section class="filters">
-			<div class="locations">
-				<h3>States</h3>
-				<h4>California, Arizon...</h4>
-			</div>
-			<div class="amenities">
-				<h3>Amenities</h3>
-				<h4>Internet, Kitchen...</h4>
-			</div>
-			<button>Search</button>
-		</section>
-	</div>
-	<footer>
-		<text>Holberton School</text>
-	</footer>
-</body>
-
+<!doctype html>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>AirBnB clone</title>
+		<link rel="stylesheet" href="styles/4-common.css">
+		<link rel="stylesheet" href="styles/3-header.css">
+		<link rel="stylesheet" href="styles/3-footer.css">
+		<link rel="stylesheet" href="styles/4-filters.css">
+		<link rel="icon" href="images/icon.png">
+	</head>
+	<body>
+		<header>
+		</header>
+		<div class="container">
+			<section class="filters">
+				<div class="locations">
+					<h3>States</h3>
+					<h4>California, Arizona...</h4>
+				</div>
+				<div class="amenities">
+					<h3>Amenities</h3>
+					<h4>Internet, Bathroom...</h4>
+				</div>
+				<button>Search</button>
+			</section>
+		</div>
+		<footer>
+			Best School
+		</footer>
+	</body>
 </html>
