--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
+		<title>AirBnB clone</title>
 	</head>
-	<body>
+	<body style="margin:0; padding: 0;">
 		<header style="background-color:#FF0000; height:70px; width:100%;">
 		</header>
 		<footer style="position:fixed; bottom:0; background-color:#00FF00; height:60px; width:100%; text-align:center; line-height: 60px;">
